@@ -1,3 +1,10 @@
+2021-02-20  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* configure.ac: Set POKE_AWK and do not error out at configure
+	time if no suitable awk is found.
+	* libpoke/Makefile.am (.pks.pkc): Check that AWK is powerful
+	enough for RAS.  Error out otherwise.
+
 2021-02-20  Mohammad-Reza Nabipoor  <m.nabipoor@yahoo.com>
 
 	* testsuite/poke.mi-json/mi-json.c (test_json_pk_sct): Remove unused
